@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UsuarioMapper {
@@ -57,6 +56,6 @@ public class UsuarioMapper {
     public List<UsuarioDto> toDto(List<Usuario> usuarios) {
         return usuarios.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
